<resources>
    <!-- Common strings -->
    <string name="app_name">Food Rescue App</string>
    <string name="username_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="email_text">Email:</string>
    <string name="phone_text">Phone:</string>
    <string name="address_text">Address:</string>
    <string name="change_details_text">SAVE DETAILS</string>
    <string name="change_password_text">CHANGE PASSWORD</string>
    <string name="new_password_text">New password:</string>
    <string name="current_password_text">Current password:</string>
    <string name="login_text">LOGIN</string>
    <string name="signup_text">SIGN UP</string>
    <string name="save_text">SAVE</string>
    <string name="add_image_text">Add image</string>
    <string name="title_text">Title:</string>
    <string name="desc_text">Description:</string>
    <string name="date_text">Date:</string>
    <string name="pick_up_times_text">Pick up times:</string>
    <string name="quantity_text">Quantity:</string>
    <string name="location_text">Location:</string>
    <string name="ok_text">OK</string>
    <string name="add_to_cart_text">ADD TO CART</string>
    <string name="total_text">Total:</string>
    <string name="transaction_finish_text">Transaction finished</string>
    <string name="pay_now_text">PAY WITH PAYPAL</string>
    <string name="clear_cart_text">CLEAR CART</string>

    <!-- Screen title strings -->
    <string name="signup_title">Register account</string>
    <string name="home_title">Discover free food</string>
    <string name="my_list_title">My list</string>
    <string name="add_food_title">Add new food</string>
    <string name="account_title">My account</string>
    <string name="cart_title">Cart</string>

    <!-- Hints for EditText(s) -->
    <string name="username_hint">username</string>
    <string name="email_hint">e-mail</string>
    <string name="phone_hint">phone</string>
    <string name="address_hint">address</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="food_title_hint">enter food name here</string>
    <string name="food_desc_hint">enter food description here</string>
    <string name="pick_up_times_hint">enter pick up times here</string>
    <string name="quantity_hint">quantity</string>
    <string name="location_hint">enter location here</string>

    <!-- Placeholder texts -->
    <string name="food_title_ph">Food title</string>
    <string name="food_desc_ph">Food description</string>
    <string name="date_ph">01/01/1970</string>
    <string name="pick_up_times_ph">00:00</string>
    <string name="quantity_ph">999</string>
    <string name="location_ph">Australia</string>
    <string name="price_ph">$ 9.99</string>
</resources>