<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".FoodDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailsNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/food_title_ph"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/detailsImageView"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/detailsDescTextView"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/food_desc_ph"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/detailsDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/date_text"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailsDateValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date_ph"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/detailsPickUpTimesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/pick_up_times_text"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailsPickUpTimesValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up_times_ph"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/detailsQuantityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/quantity_text"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailsQuantityValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_ph"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/detailsLocationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/location_text"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapsFragmentContainerView"
            android:name="com.example.foodrescueapp.MapsFragment"
            android:layout_width="300dp"
            android:layout_height="170dp" />

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="#8A8A8A"
            android:onClick="addToCart"
            android:text="@string/add_to_cart_text"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buyNowButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:backgroundTint="#2196F3"
            android:onClick="buyNow"
            android:text="@string/pay_now_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>