<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:text="@string/register_text"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="300dp"
        android:layout_height="304dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView">

        <EditText
            android:id="@+id/signupUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/username_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#8F8F8F" />

        <EditText
            android:id="@+id/signupEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#8F8F8F" />

        <EditText
            android:id="@+id/signupPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="#000000"
            android:textColorHint="#8F8F8F" />

        <EditText
            android:id="@+id/signupAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/address_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textColorHint="#8F8F8F" />

        <EditText
            android:id="@+id/signupPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#8F8F8F" />

        <EditText
            android:id="@+id/signupCPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/confirm_password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#8F8F8F" />
    </LinearLayout>

    <Button
        android:id="@+id/finaliseSignUpButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#8A8A8A"
        android:text="@string/signup_text"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>